--- a/index.html
+++ b/index.html
@@ -2443,5 +2443,6 @@
     <script src="hardware.js"></script>
     <script src="contact.js"></script>
     <script src="tool.js"></script>
+    <script src="tracker.js"></script>
   </body>
 </html>
